# srp

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  README.md
.github/workflows/: build-doxygen-docs.yml
docs/: CMakeLists.txt  Triangle.md  examples.dox  groups.dox  overview.md
examples/: CMakeLists.txt
examples/01_colored_triangle/: CMakeLists.txt  main.c
examples/02_spinning_triangle/: CMakeLists.txt  main.c
examples/03_spinning_cube/: CMakeLists.txt  main.c
examples/03_spinning_textured_cube/: CMakeLists.txt  main.c
examples/res/textures/: license.txt
examples/utility/: CMakeLists.txt  Window.c  Window.h  rad.h  timer.h  window.c  window.h
include/: buffer.h  color.h  context.h  framebuffer.h  mat.h  message_callback.h  shaders.h  srp.h  texture.h  type.h
lib/: CMakeLists.txt
lib/Color/: Color.h
lib/SDL2/include/SDL2/: SDL_config.h
lib/SDL2/lib/cmake/SDL2/: SDL2ConfigVersion.cmake  SDL2Targets-noconfig.cmake  SDL2mainTargets.cmake
lib/SDL2/lib/pkgconfig/: sdl2.pc
lib/memoryUtils/: memoryUtils.h
src/: CMakeLists.txt  Context.c  Context.h  Face.c  Face.h  Framebuffer.c  Framebuffer.h  Line.c  Line.h  Model.c  Model.h  NDC.h  Polygon.c  Polygon.h  Primitive.h  Renderer.c  Renderer.h  Scene.c  Scene.h  Shaders.c  Shaders.h  Texture.c  Texture.h  Triangle.c  Triangle.h  Type.c  Type.h  Uniforms.c  Uniforms.h  Vertex.h  VertexAttribute.h  VertexBuffer.c  VertexBuffer.h  alloc.c  alloc.h  buffer.c  buffer.h  buffer_p.h  color.h  constants.h  (+35 more)
src/MainUtils/: MainUtils.c  MainUtils.h
src/Renderer/: Renderer.c  Renderer.h
src/Utils/: Array.c  Array.h  Color.c  Color.h  DynamicArray.c  DynamicArray.h  Matrix.c  Matrix.h  MemoryUtils.c  MemoryUtils.h  NDC.c  NDC.h  Utils.c  Utils.h  compares.c  compares.h  log.h  radians.h
src/Utils/MemoryUtils/: MemoryUtils.c  MemoryUtils.h
src/Utils/Vectors/: Vector2.c  Vector2.h  Vector3.c  Vector3.h  Vector4.c  Vector4.h  Vectors.h
src/mainUtils/: mainUtils.c  mainUtils.h
src/utils/: Color.c  DynamicArray.c  DynamicArray.h  Matrix.c  Matrix.h  MemoryUtils.c  MemoryUtils.h  NDC.c  NDC.h  compares.c  compares.h  fileUtils.c  fileUtils.h  log.h  radians.h  stringUtils.c  stringUtils.h  utils.h
src/utils/Vectors/: Vector2.c  Vector2.h  Vector3.c  Vector3.h  Vector4.c  Vector4.h  Vectors.h
tests/: CMakeLists.txt  DynamicArrayTest.c  MatrixTest.c  VectorsTest.c  fileUtilsTest.c  stringUtilsTest.c
